--- a/web/index.html
+++ b/web/index.html
@@ -32,6 +32,7 @@
   <link rel="icon" type="image/png" href="favicon.png"/>
 
   <title>marketapp</title>
+  <!--web build-->>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
